tests/parsing/smtlib/poly/errors/161_function_def_bad_arg_list_1.expected
File "tests/parsing/smtlib/poly/errors/161_function_def_bad_arg_list_1.psmt2", line 2, character 29-30:
2 | (define-fun-rec foo (par (a) _))
                                 ^
Error while parsing a function definition, read the reserved word '_',
      but expected an opening parenthesis to start the list of arguments of
      the function.
